--- a/index.html
+++ b/index.html
@@ -311,14 +311,19 @@
                         <p>Kristen is a Colorado native who grew up climbing 14,000ft. mountains. She
                             also developed a passion for running and swimming, both of which she competed Division I in
                             college. After college Kristen had the privelege of becoming a mother to 4 amazing children.
-                            It was after her pregnancies that Kristen experienced first hand how pelvic floor dysfunction can affect anyone; college athelete or not. Desiring to restore her pelvic floor so that
+                            It was after her pregnancies that Kristen experienced first hand how pelvic floor dysfunction 
+                            can affect anyone; college athelete or not. Desiring to restore her pelvic floor so that
                             she could remain active, Kristen sought out advice on the subject but found it difficult to
                             receive practical help. After becoming an ACE certified personal trainer, Kristen
-                            specialized in core and pelvic floor flunction in hopes to bring others the answers to
-                            pelvic floor damage prevention and restoration. She hopes that others can ultimately
-                            experience the same freedom she has re-gained. These days you may spot Kristen sprinting
-                            down the street or leaping in the air as she plays with her children. She is excited to help
-                            others find freedom as well! </p>
+                            specialized in core and pelvic floor function in hopes to bring others the answers to
+                            pelvic floor damage prevention and restoration. She desires for others to ultimately
+                            experience the same freedom she has re-gained.  Kristen's training approach is foundational and
+                            functional. She knows how to begin where the client most needs help, and build upon this to 
+                            ultimately train clients to their fullest potential in their functional needs in life. So, whether
+                            struggling to walk a mile, or training for a collegiate sport, Kristen helps her clients reach 
+                            the next level. These days you may spot Kristen sprinting down the street or leaping
+                            in the air as she plays with her children. She is excited to help others find freedom as well! 
+                            </p>
 
                     </div>
                 </div>
