Lighten options background

--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
 
 
 <div id="options" class="parallax-section">
+    <div class="overlay-bg"></div>
+
     <div class="container">
         <div class="visa-tab row">
             <div class="col-sm-3 col-md-2">
@@ -264,7 +266,7 @@
             <div class="col-sm-8 col-sm-offset-2 text-center">
                 <div id="comments-carousel" class="carousel carousel-fade slide padding" data-ride="carousel"
                      data-interval="8000">
-                    <h1>Client Testimonials</h1>
+                    <h1><strong>Client Testimonials</strong></h1>
                     <h4 class="nonmobile">(Hover to Pause)</h4>
                     <div class="carousel-inner">
                         <div class="item active">
