--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
             <h1 class="text-center">Ready For Real Change?</h1>
             <p>If you train with Together Won, you are training from the core out.  While wokouts will include
             exercises to strengthen the core, they will always be customized to meet your fitness needs and
-            goals.  Expect to build strength, endurance, and confidence as we zero in on your body's unique chemistry
+            goals.  <b>Expect to build strength, endurance, and confidence</b> as we zero in on your body's unique chemistry
             and how it can become as healthy and efficient as possible.  If weight loss is your goal, expect
-            workouts that safely and effectively increase caloric burn both during and after the exercise session, 
+            workouts that effectively increase caloric burn both during and after the exercise session, 
             along with guidance on healthy living to ensure lasting change. Don't settle. Together we can win!
             </p>
         </div>
