--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
         <div class="slider-content">
             <div class="row">
                 <div class="col-md-7">
+                    <font: arial>
                     <h1>We Are <span>Women</span> <br>who <span>Win</span></h1>
+                    </font:>
                     <h3><b>In-home personal training beginning with protecting and restoring the pelvic floor, so you can
                     achieve your fitness goals, and live life to the fullest!</b></h3>
                     <a href="#about" class="btn btn-primary">Learn More</a>
