--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="slider-content">
             <div class="row">
                 <div class="col-md-7">
-                    <font arial>
+                    <font face "arial">
                     <h1>We Are <span>Women</span> <br>who <span>Win</span></h1>
                     </font>
                     <h3><b>In-home personal training beginning with protecting and restoring the pelvic floor, so you can
