--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
             </p>
             <br>
             <h1 class="text-center">Ready For Lasting Change?</h1>
-            <p>When you train with Together Won, you are training from the core out.  While wokouts will include
-            exercises to strengthen the core, they are always be customized to meet your fitness needs and
+            <p>When you train with Together Won, you are training from the core out.  While wokouts include
+            exercises to strengthen the core, they are also customized to meet your fitness needs and
             goals.  <b>Expect to build strength, endurance, and confidence</b> as we zero in on your body's unique chemistry
             and how it can become as healthy and efficient as possible.  If weight loss is your goal, expect
             workouts that <b>effectively increase caloric burn both during and after the exercise session</b>, 
