--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                 difficulty while wishing you wouldn't have to?
             </p>
             <br>
-            <p>Pelvic floor dysfunction imcompasses a range of symptoms including mild incontinence to more serious
+            <p>Pelvic floor dysfunction encompasses a range of symptoms including mild incontinence to more serious
                 conditions such as severe pelvic pain and even pelvic organ prolapse. <b>Many women believe pelvic floor
                     dysfuntion is simply a reality of life that can not be avoided or improved.</b> Because of this,
-                they neglet to strengthen these muscles. Unfortunately, weak pelvic floor muscles usually progress to
+                they neglect to strengthen these muscles. Unfortunately, weak pelvic floor muscles usually progress to
                 more serious conditions as women age. In reality,<b> pelvic floor dysfunction is not something you have
                     to live with!</b> The pelvic floor is part of the body's core; the center of strength, movement and
                 balance. Therefore, <b>training the body properly starts with training the core.</b> You don't need to
