--- a/index.html
+++ b/index.html
@@ -272,9 +272,10 @@
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2 text-center">
                 <div id="comments-carousel" class="carousel carousel-fade slide padding" data-ride="carousel"
-                     data-interval="8000">
+                     data-interval="false">
                     <h1><strong>Client Testimonials</strong></h1>
-                    <h4 class="nonmobile">(Hover to Pause)</h4>
+                    <div class="carousel-prev"><a id="carousel-prev"><i class="fa fa-caret-left"></i></a></div>
+                    <div class="carousel-next"><a id="carousel-next"><i class="fa fa-caret-right"></i></a></div>
                     <div class="carousel-inner">
                         <div class="item active">
                             <img class="img-responsive img-circle" src="images/julie.jpg" alt="Julie Versaw"/>
