--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             
                             <li>1 Hour sessions with a friend that has similar training goals</li>
                             <li>A female certified trainer who listens and seeks to understand</li>
-                            <li>Partner-centered personalized workouts that are challengine and fun</li>
+                            <li>Partner-centered personalized workouts that are challenging and fun</li>
                             <li>Crowd-free training in your home or in the trainer's home gym</li>
                             <li>Safe, effective workouts that include warm-up, workout, and stretching</li>
                             <li>Assessments and feedback to gauge your progress</li>
@@ -328,7 +328,7 @@
                             It was after her pregnancies that Kristen experienced first hand how pelvic floor dysfunction 
                             can affect anyone; college athelete or not. Desiring to restore her pelvic floor so that
                             she could remain active, Kristen sought out advice but found it difficult to
-                            receive practical help. After becoming an ACE certified personal trainer, Kristen
+                            receive practical help. After becoming an ACE certified personal trainer Kristen
                             specialized in core and pelvic floor function in hopes to bring others the answers to
                             pelvic floor damage prevention and restoration. She desires for others to ultimately
                             experience the same freedom she has re-gained.  Kristen's training approach is foundational and
