--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                                 to do things that I never imagined that I could do. Kristen is always prompt and is
                                 always prepared with a workout plan based on my progress and needs and has all the
                                 equipment we need ready and waiting.</p>
-                            <p class="word-author"><span>Julie Versaw</span></p>
+                            <p class="word-author"><span>Julie</span></p>
                         </div>
                         <div class="item">
                             <img class="img-responsive img-circle" src="images/logo.png" alt=""/>
