--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="row">
                 <div class="col-md-7">
                     
-                    <h1 style=font-face:arial>We Are <span>Women</span> <br>who <span>Win</span></h1>
+                    <h1 id="win-title">We Are <span>Women</span> <br>who <span>Win</span></h1>
                     
                     <h3><b>In-home personal training beginning with protecting and restoring the pelvic floor, so you can
                     achieve your fitness goals, and live life to the fullest!</b></h3>
