--- a/index.html
+++ b/index.html
@@ -287,12 +287,13 @@
                         </div>
                         <div class="item">
                             <img class="img-responsive img-circle" src="images/logo.png" alt=""/>
-                            <p class="text-left">Lorem Ipsum is simply dummy text of the printing and typesetting
-                                industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s,
-                                when an unknown printer took a galley. Lorem Ipsum is simply dummy text of the printing
-                                and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever
-                                since the 1500s, when an unknown printer took a galley.</p>
-                            <p class="word-author"><span>Superwoman</span></p>
+                            <p class="text-left">Working with Kristen has been an awesome experience. 
+                            She patiently asked pertinent probing questions to help identify my personal goals
+                            for strength and conditioning.  Her physical assessment uncovered issues that I had 
+                            just learned to accept without realizing how they were impacting my life.  
+                            Her detailed plan kept in mind my busy schedule as well as my goals.  
+                            Can’t wait to see where this goes!.</p>
+                            <p class="word-author"><span>Sharon</span></p>
                         </div>
                         <div class="item">
                             <img class="img-responsive img-circle" src="images/logo.png" alt=""/>
