--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                             <p class="word-author"><span>Julie</span></p>
                         </div>
                         <div class="item">
-                            <img class="img-responsive img-circle" src="images/20160811_112806.jpg" alt=""/>
+                            <img class="img-responsive img-circle" src="images/" alt="Sharon"/>
                             <p class="text-left">Working with Kristen has been an awesome experience. 
                             She patiently asked pertinent probing questions to help identify my personal goals
                             for strength and conditioning.  Her physical assessment uncovered issues that I had 
