--- a/index.html
+++ b/index.html
@@ -339,6 +339,18 @@
                             the next level. These days you may spot Kristen sprinting down the street or leaping
                             in the air as she plays with her children. She is excited to help others find freedom as well! 
                             </p>
+                            
+                            <div class="idea-badge" data-id="1095452" data-type="thin"></div>
+<script type="text/javascript">
+(function() {
+  var po = document.createElement('script'), d ='https://api.ideafit.com';
+  po.type = 'text/javascript'; po.async = true; po.id = 'idea-badge-script';
+  po.setAttribute('data-domain', d);
+  po.src = d + '/assets/badge.js';
+  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+})();
+</script>
+
 
                     </div>
                 </div>
