--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                             in the air as she plays with her children. She is excited to help others find freedom as well! 
                             </p>
                             
-                            <div class="idea-badge" data-id="1095452" data-type="thin"></div>
+                            <div class="idea-badge" data-id="1095452"></div>
 <script type="text/javascript">
 (function() {
   var po = document.createElement('script'), d ='https://api.ideafit.com';
@@ -350,6 +350,7 @@
   var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
 })();
 </script>
+
 
 
                     </div>
