--- a/index.html
+++ b/index.html
@@ -390,6 +390,16 @@
         <div class="container text-center">
             <p>© Copyright 2016 <a href="#">TogetherWon</a>. All Rights Reserved.</p>
         </div>
+        <div class="idea-badge" data-id="1095452"></div>
+<script type="text/javascript">
+(function() {
+  var po = document.createElement('script'), d ='https://api.ideafit.com';
+  po.type = 'text/javascript'; po.async = true; po.id = 'idea-badge-script';
+  po.setAttribute('data-domain', d);
+  po.src = d + '/assets/badge.js';
+  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+})();
+</script>
     </div>
 </footer>
 
