--- a/index.html
+++ b/index.html
@@ -339,17 +339,16 @@
                             the next level. These days you may spot Kristen sprinting down the street or leaping
                             in the air as she plays with her children. She is excited to help others find freedom as well! 
                             </p>
-                            
-                            
-
-
-
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div><!--/#trainer-->
+
+<div class="certified">
+    <a href="http://www.ideafit.com/profile/kristen-nielsen"><img src="images/certified.png"/></a>
+</div>
 
 
 <footer id="contact-us">
@@ -380,22 +379,10 @@
                           placeholder="Message"></textarea>
             </div>
         </div>
-        <div class="form-group">
+        <div class="form-group text-center">
             <button type="submit" class="btn btn-primary">Submit</button>
         </div>
-        <div class="idea-badge" data-id="1095452"></div>
-<script type="text/javascript">
-(function() {
-  var po = document.createElement('script'), d ='https://api.ideafit.com';
-  po.type = 'text/javascript'; po.async = true; po.id = 'idea-badge-script';
-  po.setAttribute('data-domain', d);
-  po.src = d + '/assets/badge.js';
-  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-})();
-</script>
     </form>
-    </div>
-    </div><!--/#contact-form-->
     <div id="footer-bottom">
         <div class="container text-center">
             <p>© Copyright 2016 <a href="#">TogetherWon</a>. All Rights Reserved.</p>
