--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
                                 <li>One Hour, 1-on-1 sessions designed entirely around your needs and goals</li>
                                 <li>A female certified trainer that listens and seeks to understand</li>
                                 <li>Individualized workouts based on assessments that identify muscle imbalances</li>
+                                <li>Zone training using heart rate to maximize caloric burn</li>
                                 <li>Crowd-free training in your home or in the trainer's home gym</li>
                                 <li>Safe, effective workouts that include warm-up, workout, and stretching</li>
                                 <li>Assessments and feedback to gauge your progress</li>
@@ -160,6 +161,7 @@
                             <li>1 Hour sessions with a friend that has similar training goals</li>
                             <li>A female certified trainer who listens and seeks to understand</li>
                             <li>Partner-centered personalized workouts that are challenging and fun</li>
+                            <li>Zone training using heart rate to maximize caloric burn</li>
                             <li>Crowd-free training in your home or in the trainer's home gym</li>
                             <li>Safe, effective workouts that include warm-up, workout, and stretching</li>
                             <li>Assessments and feedback to gauge your progress</li>
@@ -295,15 +297,7 @@
                             Can’t wait to see where this goes!.</p>
                             <p class="word-author"><span>Sharon</span></p>
                         </div>
-                        <div class="item">
-                            <img class="img-responsive img-circle" src="images/logo.png" alt=""/>
-                            <p class="text-left">Lorem Ipsum is simply dummy text of the printing and typesetting
-                                industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s,
-                                when an unknown printer took a galley. Lorem Ipsum is simply dummy text of the printing
-                                and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever
-                                since the 1500s, when an unknown printer took a galley.</p>
-                            <p class="word-author"><span>Jane Doe</span></p>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
