--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
 
             <h1 class="text-center">Core?</h1>
             <p>The core is more than the muscles that span the abdomen and back. It contains deep muscles that are
-            the center of strength, balance and control for the entire body.  As women transition through different stages
-            of life, correct core function is critcal to maintaining an active lifestyle.  If you experience back pain,
-            leak when you sneeze, have been pregnant, or simply struggle to perform everday movements,
+            central to strength, balance and control for the entire body.  As women transition through different stages
+            of life, correct core function is crucial to maintaining an active lifestyle.  If you experience back pain,
+            leak when you sneeze, have been pregnant, or simply struggle to perform everyday movements,
             proper core training is critical to restoration.  If you are an athlete seeking to increase power and speed, 
-            or a pregnant women hoping to maintain strength before and after pregnancy, proper core training is essential.
+            or a pregnant woman hoping to maintain strength before and after pregnancy, proper core training is essential.
             <br>
             
             <br>
@@ -104,7 +104,7 @@
             use of heartrate driven zone-training. If you are pregant or post-partum, expect a trainer that is knoweable
             on safe and effective training practives.  If you are over 55, expect a trainer that is aware of the changes that
             occur in our bodies as we age.  If you are a young athlete, expect a trainer that knows how to help you get to the
-            next level of power and speed.  <b>Together we can win!</b>
+            next level of power and speed.  Achieve your goals! <b>Together we can win!</b>
             </p>
         </div>
     </div>
