--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             workouts that <b>effectively increase caloric burn both during and after the exercise session</b> through the 
             use of heartrate driven zone-training. If you are pregant or post-partum, expect a trainer that is knoweable
             on safe and effective training practives.  If you are over 55, expect a trainer that is aware of the changes that
-            occur in our bodies as we age.  If you are a young athlete, expect a trainer that knows how to help you get to the
+            occur in females as they age.  If you are a young athlete, expect a trainer that knows how to help you get to the
             next level of power and speed.  Achieve your goals! <b>Together we can win!</b>
             </p>
         </div>
@@ -139,7 +139,7 @@
                                 <li>A female certified trainer that listens and seeks to understand</li>
                                 <li>Individualized workouts based on assessments that identify muscle imbalances</li>
                                 <li>Zone training using heart rate to maximize caloric burn</li>
-                                <li>Crowd-free training in your home or in the trainer's home gym</li>
+                                <li>Crowd-free training in your home, in the great outdoors, or in the trainer's home gym</li>
                                 <li>Safe, effective workouts that include warm-up, workout, and stretching</li>
                                 <li>Assessments and feedback to gauge your progress</li>
                                 <li>Weekly workout plans for the days you are not with the trainer</li>
