--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     
                     <h1 id="win-title">We Are <span>Women</span> <br>who <span>Win</span></h1>
                     
-                    <h3><b>In-home personal training beginning with strengthening the core, so you can
+                    <h3><b>In-home personal training beginning with <b>core</b> strengthening, so you can
                     achieve your fitness goals, and live life to the fullest!</b></h3>
                     <a href="#about" class="btn btn-primary">Learn More</a>
 
@@ -99,12 +99,12 @@
             <p>When you train with Together Won, you are training from the core out.  While workouts include
             exercises to strengthen the core, they are also customized to meet your fitness needs and
             goals.  <b>Expect to build strength, endurance, and confidence</b> as we zero in on your body's unique chemistry
-            and how it can become as healthy and efficient as possible.  If weight loss is your goal, expect
-            workouts that <b>effectively increase caloric burn both during and after the exercise session</b> through the 
-            use of heartrate driven zone-training. If you are pregant or post-partum, expect a trainer that is knoweable
-            on safe and effective training practives.  If you are over 55, expect a trainer that is aware of the changes that
-            occur in females as they age.  If you are a young athlete, expect a trainer that knows how to help you get to the
-            next level of power and speed.  Achieve your goals! <b>Together we can win!</b>
+            and how it can become as healthy and efficient as possible.  Is <b>weight loss</b> your goal? You will have
+            workouts that <b>effectively increase caloric burn both during and after the exercise session</b> through
+            heartrate driven zone-training. <b>Pregant or post-partum?</b> You will have workouts that safe and effective.
+            <b>Over 55?</b> You will have workouts that are mindful of the changes that occur in females as they age.
+            <b>Young athlete?</b>,Your workouts will get you to the next level of power and speed.  
+            Achieve your goals! <b>Together we can win!</b>
             </p>
         </div>
     </div>
@@ -159,7 +159,7 @@
                             <li>A female certified trainer who listens and seeks to understand</li>
                             <li>Partner-centered personalized workouts that are challenging and fun</li>
                             <li>Zone training using heart rate to maximize caloric burn</li>
-                            <li>Crowd-free training in your home or in the trainer's home gym</li>
+                            <li>Crowd-free training in your home, in the great outdoors, or in the trainer's home gym</li>
                             <li>Safe, effective workouts that include warm-up, workout, and stretching</li>
                             <li>Assessments and feedback to gauge your progress</li>
                             <li>Opportunity to earn rewards for ongoing effort</li>
@@ -313,14 +313,14 @@
                     </div>
                     <div class="product-info">
                         <h1>Kristen Nielsen</h1>
-                        <h2>ACE Certified Personal Trainer <br> Pelvic Floor Specialist</h2>
+                        <h2>ACE Certified Personal Trainer <br> Core Training Specialist</h2>
                         <p>Kristen is a Colorado native who grew up climbing 14,000ft. mountains. She
                             also developed a passion for running and swimming, both of which she competed Division I in
                             college. After college Kristen had the privelege of becoming a mother to 4 amazing children.
-                            It was after her pregnancies that Kristen experienced first hand how pelvic floor dysfunction 
-                            can affect anyone; college athelete or not. Desiring to restore her pelvic floor so that
+                            It was after her pregnancies that Kristen experienced first hand how core dysfunction 
+                            can affect anyone; college athelete or not. Desiring to restore her core so that
                             she could remain active, Kristen sought out advice but found it difficult to
-                            receive practical help. After becoming an ACE certified personal trainer Kristen
+                            receive . After becoming an ACE certified personal trainer Kristen
                             specialized in core and pelvic floor function in hopes to bring others the answers to
                             pelvic floor damage prevention and restoration. She desires for others to ultimately
                             experience the same freedom she has re-gained.  Kristen's training approach is foundational and
