--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
             exercises to strengthen the core, they are also customized to meet your fitness needs and
             goals.  <b>Expect to build strength, endurance, and confidence</b> as we zero in on your body's unique chemistry
             and how it can become as healthy and efficient as possible.  Is <b>weight loss</b> your goal? You will have
-            workouts that <b>effectively increase caloric burn both during and after the exercise session</b> through
-            heartrate driven zone-training. <b>Pregant or post-partum?</b> You will have workouts that safe and effective.
+            workouts that effectively increase caloric burn both during and after the exercise session through
+            heartrate driven zone-training. <b>Pregant or post-partum?</b> Your workouts will be safe and effective.
             <b>Over 55?</b> You will have workouts that are mindful of the changes that occur in females as they age.
             <b>Young athlete?</b>,Your workouts will get you to the next level of power and speed.  
             Achieve your goals! <b>Together we can win!</b>
