--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <h1 class="text-center">Ready For Lasting Change?</h1>
             <p>When you train with Together Won, you are training from the core out.  While workouts include
             exercises to strengthen the core, they are also customized to meet your fitness needs and
-            goals.  <b>Expect to build strength, endurance, and confidence</b> as we zero in on your body's unique chemistry
+            goals.  Expect to build strength, endurance, and confidence as we zero in on your body's unique chemistry
             and how it can become as healthy and efficient as possible.  Is <b>weight loss</b> your goal? You will have
             workouts that effectively increase caloric burn both during and after the exercise session through
             heartrate driven zone-training. <b>Pregant or post-partum?</b> Your workouts will be safe and effective.
