--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
             <h1 class="text-center">Core?</h1>
             <p>The core is more than the muscles that span the abdomen and back. It contains deep muscles that are
             central to strength, balance and control for the entire body.  As women transition through different stages
-            of life, correct core function is crucial to maintaining an active lifestyle.  If you experience back pain,
-            leak when you sneeze, have been pregnant, or simply struggle to perform everyday movements,
-            proper core training is critical to restoration.  If you are an athlete seeking to increase power and speed, 
+            of life, correct core function is key to maintaining an active lifestyle.  If you experience <b>back pain</b>,
+            <b>leak</b> when you sneeze, have been <b>pregnant</b>, or simply struggle to perform everyday movements,
+            proper core training is critical to restoration.  If you are an <b>athlete</b> seeking to increase power and speed, 
             or a pregnant woman hoping to maintain strength before and after pregnancy, proper core training is essential.
             <br>
             
@@ -102,8 +102,8 @@
             and how it can become as healthy and efficient as possible.  Is <b>weight loss</b> your goal? You will have
             workouts that effectively increase caloric burn both during and after the exercise session through
             heartrate driven zone-training. <b>Pregant or post-partum?</b> Your workouts will be safe and effective.
-            <b>Over 55?</b> You will have workouts that are mindful of the changes that occur in females as they age.
-            <b>Young athlete?</b>,Your workouts will get you to the next level of power and speed.  
+            <b>Over 55?</b> You will have workouts that account for the changes that occur in females with age.
+            <b>Young athlete?</b>Your workouts will get you to the next level of power and speed.  
             Achieve your goals! <b>Together we can win!</b>
             </p>
         </div>
